--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
             <img src="https://i.postimg.cc/d0vg4Vk4/4bf96595468ab0a77843d96a7eba1bec.jpg" alt="Logo Bat" style=" width: 100%;">
 
             <div class="buttons">                
-                <a target="_blank" class="btn" onclick="sendMessage">ACESSAR</a>
+                <a href="https://open.spotify.com/playlist/6cCYNGMCqVrYMs3KSfh0fa?si=yLbNaQn-TViJKlICBJCXpQ" target="_blank" class="btn" onclick="sendMessage">ACESSAR</a>
             </div>
         </div>
     </div>
